Exclude blank script in the script editor list of scripts. Move Is Passive check boxes down on skill and ability editors.

--- a/Ceriyo.Toolset/Components/SkillEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/SkillEditorComponent.xaml
@@ -107,7 +107,7 @@
                   Grid.Column="1"
                   IsChecked="{Binding SelectedSkill.IsPassive}"
                   IsEnabled="{Binding IsSkillSelected}"
-                  VerticalAlignment="Top" Margin="10,195,0,0"/>
+                  VerticalAlignment="Top" Margin="10,10,0,0" Grid.Row="1"/>
 
         <TabControl HorizontalAlignment="Stretch" 
                     Height="Auto" 
