--- a/Ceriyo.Toolset/Components/AbilityEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/AbilityEditorComponent.xaml
@@ -105,7 +105,7 @@
                   Grid.Column="1"
                   IsChecked="{Binding SelectedAbility.IsPassive}"
                   IsEnabled="{Binding IsAbilitySelected}"
-                  VerticalAlignment="Top" Margin="10,195,0,0"/>
+                  VerticalAlignment="Top" Margin="10,10,0,0" Grid.Row="1"/>
 
         <TabControl HorizontalAlignment="Stretch" 
                     Height="Auto" 
