--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:frb="clr-namespace:Ceriyo.Toolset.FRBControl" 
         xmlns:Comp="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.MainWindow"
-    Title="Ceriyo Editor" Height="600" Width="800" MinHeight="600" MinWidth="800"
+    Title="{Binding WindowTitle}" Height="600" Width="800" MinHeight="600" MinWidth="800"
     Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
