--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:frb="clr-namespace:Ceriyo.Toolset.FRBControl" 
-        xmlns:Comp="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.MainWindow"
+    xmlns:Comp="clr-namespace:Ceriyo.Toolset.Components"
+    xmlns:frbControl="clr-namespace:Ceriyo.Toolset.Components.FRBControl"
+    x:Class="Ceriyo.Toolset.MainWindow"
     Title="{Binding WindowTitle}" Height="600" Width="800" MinHeight="600" MinWidth="800"
     Closing="Window_Closing">
     <Grid>
@@ -47,7 +48,7 @@
             Grid.ColumnSpan="4"
             Grid.RowSpan="5" >
 
-            <frb:FlatRedBallControl
+            <frbControl:FlatRedBallControl
             x:Name="gameControl"/>
         </DockPanel>
         <Comp:HotBarControl x:Name="hotBar"
