--- a/Ceriyo.Toolset/Components/AbilityEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/AbilityEditorComponent.xaml
@@ -123,7 +123,7 @@
                 		Margin="120,12,0,0" 
                 		VerticalAlignment="Top" 
                 		ItemsSource="{Binding Scripts}"
-                		SelectedValue="{Binding Path=SelectedAbility.Scripts[(enums:ScriptEventTypeEnum)OnAbilityActivated]}"
+                		SelectedValue="{Binding Path=SelectedAbility.Scripts[(enums:ScriptEventType)OnAbilityActivated]}"
                 		IsEnabled="{Binding IsAbilitySelected}"
                 		Width="Auto"/>
 
