--- a/Ceriyo.Toolset/Components/CreatureEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/CreatureEditorComponent.xaml
@@ -291,7 +291,7 @@
 						Margin="120,39,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureAttacked]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureAttacked]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                     <Label Content="On Damaged:" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top"/>
@@ -300,7 +300,7 @@
 						Margin="120,66,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureDamaged]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureDamaged]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                     <Label Content="On Death:" HorizontalAlignment="Left" Margin="10,92,0,0" VerticalAlignment="Top"/>
@@ -309,7 +309,7 @@
 						Margin="120,93,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureDeath]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureDeath]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                     <Label Content="On Disturbed:" HorizontalAlignment="Left" Margin="10,119,0,0" VerticalAlignment="Top"/>
@@ -318,7 +318,7 @@
 						Margin="120,120,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureDisturbed]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureDisturbed]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                     <Label Content="On Conversation:" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalAlignment="Top"/>
@@ -327,7 +327,7 @@
 						Margin="120,12,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureConversation]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureConversation]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                     <Label Content="On Heartbeat:" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top"/>
@@ -336,7 +336,7 @@
 						Margin="120,147,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureHeartbeat]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureHeartbeat]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                     <Label Content="On Spawned:" HorizontalAlignment="Left" Margin="10,173,0,0" VerticalAlignment="Top"/>
@@ -345,7 +345,7 @@
 						Margin="120,174,0,0" 
 						VerticalAlignment="Top" 
 						ItemsSource="{Binding Scripts}"
-						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventTypeEnum)OnCreatureSpawned]}"
+						SelectedValue="{Binding Path=SelectedCreature.Scripts[(enums:ScriptEventType)OnCreatureSpawned]}"
 						IsEnabled="{Binding IsCreatureSelected}"
 						Width="Auto"/>
                 </Grid>
