--- a/Ceriyo.Toolset/Windows/ResourcePackEditorWindow.xaml
+++ b/Ceriyo.Toolset/Windows/ResourcePackEditorWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="Ceriyo.Toolset.Windows.ResourcePackEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Resource Pack Editor" Height="500" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Closing="Window_Closing">
+        Title="Resource Pack Editor" Height="500" Width="400" 
+        ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Closing="Window_Closing"
+        xmlns:vm="clr-namespace:Ceriyo.Data.ViewModels;assembly=Ceriyo.Data">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -25,7 +27,7 @@
             <MenuItem Header="Resource">
                 <MenuItem Header="Add Resource..." Click="AddResource"></MenuItem>
             </MenuItem>
-        </Menu>
+        </Menu> 
 
         <DataGrid Name="dgResources" 
                   ItemsSource="{Binding Resources}"
@@ -55,6 +57,12 @@
                                     IsReadOnly="True"
                                     Binding="{Binding SizeBytes}">
                 </DataGridTextColumn>
+                <DataGridComboBoxColumn Header="Type"
+                                        SelectedItemBinding="{Binding ResourceSubType}"
+                                        DisplayMemberPath="Name"
+                                        ItemsSource="{Binding Source={x:Static vm:ResourceEditorVM.ResourceTypes}}">
+                    
+                </DataGridComboBoxColumn>
             </DataGrid.Columns>
         </DataGrid>
 
