--- a/Ceriyo.Server.WPF/Views/DescriptionView/Description.xaml
+++ b/Ceriyo.Server.WPF/Views/DescriptionView/Description.xaml
@@ -40,7 +40,7 @@
             Grid.Row="1"
             Grid.ColumnSpan="3"
             TextWrapping="Wrap"
-            Text="{Binding ServerDescription}">
+            Text="{Binding Settings.Description}">
             
         </TextBox>
         
@@ -49,7 +49,7 @@
             Grid.Row="3"
             Grid.ColumnSpan="3"
             TextWrapping="Wrap"
-            Text="{Binding ServerAnnouncement}">
+            Text="{Binding Settings.Announcement}">
             
         </TextBox>
         
