--- a/Ceriyo.Server.WPF/Views/DetailsView/Details.xaml
+++ b/Ceriyo.Server.WPF/Views/DetailsView/Details.xaml
@@ -52,7 +52,7 @@
             Margin="10,4,5,4"
             Grid.Column="2"
             Grid.Row="0"
-            Text="{Binding ServerName}"
+            Text="{Binding Settings.ServerName}"
             Grid.ColumnSpan="2">
         </TextBox>
 
@@ -83,7 +83,7 @@
             Grid.Row="1"
             Minimum="0"
             Maximum="{Binding MaximumPortNumber}"
-            Value="{Binding PortNumber}">
+            Value="{Binding Settings.Port}">
         </xctk:IntegerUpDown>
 
         <Label
@@ -111,7 +111,7 @@
             Grid.Column="5"
             Grid.Row="2"
             ItemsSource="{Binding Source={extension:EnumBindingSource {x:Type constants:PVPType}}}"
-            SelectedItem="{Binding SelectedPVPType}">
+            SelectedItem="{Binding Settings.PVPType}">
             
         </ComboBox>
         
@@ -132,7 +132,7 @@
             Grid.Row="3"
             Grid.RowSpan="4"
             ItemsSource="{Binding Source={extension:EnumBindingSource {x:Type constants:GameCategory}}}"
-            SelectedItem="{Binding SelectedGameCategory}"
+            SelectedItem="{Binding Settings.GameCategory}"
             SelectionMode="Single">
             
         </ListBox>
@@ -149,7 +149,7 @@
             Grid.Row="3"
             Minimum="1"
             Maximum="{Binding MaximumPlayers}"
-            Value="{Binding SelectedMaxPlayers}">
+            Value="{Binding Settings.MaxPlayers}">
         </xctk:IntegerUpDown>
         
         <CheckBox
@@ -157,7 +157,7 @@
             Grid.Row="4"
             Grid.Column="4"
             Grid.ColumnSpan="2"
-            IsChecked="{Binding AllowCharacterDeletion}">
+            IsChecked="{Binding Settings.AllowCharacterDeletion}">
             Allow Character Deletion
         </CheckBox>
         
@@ -197,7 +197,7 @@
             Grid.Row="7"
             Grid.Column="4"
             Grid.ColumnSpan="2"
-            Text="{Binding PlayerPassword}">
+            Text="{Binding Settings.PlayerPassword}">
             
         </TextBox>
 
@@ -214,7 +214,7 @@
             Grid.Row="8"
             Grid.Column="4"
             Grid.ColumnSpan="2"
-            Text="{Binding GMPassword}">
+            Text="{Binding Settings.GMPassword}">
             
         </TextBox>
 
